--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hugo Salazar | Portfolio</title>
 
-    <link rel="shortcut icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="images/h_logo_text_white.svg" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
